# online-auction

./: .gitignore  .travis.yml  AmazoniTechArt.pem.enc  README.md
backend_auction/: Dockerfile  docker-compose.yml  entrypoint.sh  example.env  pyproject.toml
backend_auction/auction/: admin.py  apps.py  consumers.py  mail.py  models.py  routers.py  serializers.py  signals.py  tasks.py  urls.py  validation.py  views.py  ws_auth.py
backend_auction/auction/migrations/: 0001_initial.py  0002_auto_20210506_1758.py  0002_dutch_english.py  0003_auto_20210429_0836.py  0004_alter_auction_status.py  0005_alter_auction_status.py  0006_offer.py  0007_alter_offer_timestamp.py
backend_auction/backend_auction/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend_auction/item/: models.py  serializers.py
backend_auction/item/migrations/: 0001_initial.py
devops/: .env.enc  deploy_app.yml  hosts
devops/group_vars/: appservers
devops/roles/application/defaults/: main.yml
devops/roles/application/files/: daphne.service  gunicorn.service  gunicorn.socket
devops/roles/application/tasks/: main.yml
devops/roles/application/templates/: .env.j2
devops/roles/nginx/tasks/: main.yml
devops/roles/nginx/templates/: backend_auction  nginx.conf
devops/roles/python/tasks/: main.yml
devops/roles/setup/tasks/: main.yml
scripts/: ansible.sh  zip_archive.sh
user-imitation-tool/: pyproject.toml
user-imitation-tool/user_imitation_tool/: __main__.py  apps.py  cli.py  config.py  decorators.py  lot_manager.py  lot_retriever.py  user_imitator.py  utils.py
