[tool.poetry]
name = "backend_auction"
version = "0.1.0"
description = ""
authors = ["MargitStar <sovenokbymargo@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
django = "^3.2"
djangorestframework = "^3.12.4"
psycopg2-binary = "^2.8.6"
python-decouple = "^3.4"
django-filter = "^2.4.0"
Pillow = "^8.2.0"
djangorestframework-simplejwt = "^4.6.0"
celery = "^4.4.7"
redis = "^3.5.3"
channels = "^3.0.3"
channels-redis = "^3.2.0"
daphne = "^3.0.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
isort = "^5.8.0"
autopep8 = "^1.5.6"
flower = "^0.9.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
