[tool.poetry]
name = "user-imitation-tool"
version = "0.1.0"
description = ""
authors = ["MargitStar <sovenokbymargo@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.4"
retry = "^0.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
